
2011-05-23  Vincent Torri

	* Fix compilation with libjpeg 8 on Windows.

2011-05-24  Cedric Bail

	* Use Eina_File when possible.

2011-05-26  Carsten Haitzler (The Rasterman)

	* Fix Evas table to handle weighting correctly for items and veto
        rows or columns that have any child spanning that column not
        able to expand.
        * Fix Evas table to use actual fractional weights, not just
        boolean expand/not expand from weight value.

2011-05-27  Carsten Haitzler (The Rasterman)

	* Add evas_event_thaw_eval() for conveneince of evaluating in state
        and callbacks of the pointer after a thaw is complete.

2011-05-29  Tom Hacohen (TAsn)

	* Font-engine: Fixed a bug in glyph search causing inconsistent return
	  values. The found fi should always be NULL if there was no fi found.

2011-05-29  Tom Hacohen (TAsn)

	* Font-engine: Conform to the API changes in Harfbuzz 0.6.0

2011-05-29  Raoul Hecky

	* Textblock: Added support for numeric escape codes. e.g "&#x3c;".

2011-05-29  Vincent Torri

	* Fix compilation when --disable-async-preload is passed to configure.

2011-06-01  Cedric Bail

	* Add +evas_object_image_extension_can_load_get and
	evas_object_image_extension_can_load_fast_get that check if a file
	may be opened by Evas_Object_Image.

2011-06-07  Cedric Bail

	* Use Eina_File for JPEG loader.
	* Add evas_object_image_load_orientation_get and evas_object_image_load_orientation_set,
	that tell if we should honor the orientation information when loading image file.

2011-06-17  Carsten Haitzler (The Rasterman)

	* Allow evas table to re-pack the same object without error and just
        update packing parameters
        * Allow to get packing location of table child

2011-06-28  Tom Hacohen (TAsn)

	* Polygon: Implemented "is_inside".

2011-07-05  Hyoyoung Chang

	* Fix bug where event causes event in callback on same object, but
        with same event counter, so also filter out same event types.
